--- a/MyEventURL/Views/Events/_AddEvent.cshtml
+++ b/MyEventURL/Views/Events/_AddEvent.cshtml
@@ -135,7 +135,7 @@
                     addeventatc.register('button-click', function(obj){
 
                         // Console log example
-                        record_eifact("myeventurl", "engage", "@Model.EventId", ip);
+                        EventForm.runAddEngage();
 
                     });
             };
