--- a/MyEventURL/Views/Events/_EventForm.cshtml
+++ b/MyEventURL/Views/Events/_EventForm.cshtml
@@ -1,10 +1,8 @@
-﻿
-
-    <!-- Modal -->
+﻿    <!-- Modal -->
 <div class="modal fade" id="eventform" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
-        <div class="modal-content">
+        <div class="modal-content" :class="Style">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <div class="col-md-4" style="float:right">
@@ -148,8 +146,8 @@
             Reminder: true,
             Forms: "",
             Sway: "",
-            Views: "",
-            Engaged: "",
+            Views: 0,
+            Engaged: 0,
             NoReply: false,
             Private: false,
             Icon: false,
@@ -256,6 +254,16 @@
             evalEditButton: function () {
                 return (this.ModalTitle == "Edit Event")
             },
+            runAddView: function () {
+                this.Views = (parseInt(this.Views) < 1) ? 0 : parseInt(this.Views);
+                this.Views += 1;
+                this.setServerEvent(reload=false);
+            },
+            runAddEngage: function () {
+                this.Engaged = (parseInt(this.Engaged) < 1) ? 0 : parseInt(this.Engaged);
+                this.Engaged += 1;
+                this.setServerEvent(reload=false);
+            },
             runCopyEvent: function (id) {
                 this.getServerEvent(id, "Copy Event", "Create");
                 $("#eventform").modal({ backdrop: 'static', keyboard: false, show: true });
@@ -269,8 +277,8 @@
                 this.Error.End.Show = !(moment(this.EndTime, momentjsformat).isValid());
                 this.Error.TZ.Show = (_.findWhere(EventForm.TimeZoneList, { label: EventForm.TimeZone }) == null);
                 this.Error.Forms.Show = !((/https:\/\/forms\.office\.com\//.test(this.Forms.substring(0, 25))) || this.Forms == "");                
-                this.Error.Sway.Show = !((/https:\/\/sway\.office\.com\//.test(this.Sway.substring(0,25))) || this.Sway == "");
-                this.Error.SignIn.Show = (Account.Email == "");
+                this.Error.Sway.Show = !((/https:\/\/sway\.office\.com\//.test(this.Sway.substring(0, 25))) || this.Sway == "");
+                this.Error.SignIn.Show = (Account.Email == "" && this.Email == "");
                 if (this.Error.Start.Show || this.Error.End.Show || this.Error.TZ.Show || this.Error.Forms.Show || this.Error.Sway.Show || this.Error.SignIn.Show) return false;
                 return true;
             },
@@ -283,7 +291,7 @@
             setModalTitle: function (title) {
                 this.ModalTitle = title;
             },
-            setServerEvent: function () {
+            setServerEvent: function (reload = true) {
                 if (this.runValidateForm()) {
                     var event = {
                         EventId: this.EventId,
@@ -294,7 +302,7 @@
                         Description: this.Description,
                         Location: this.Location,
                         Organizer: this.Organizer,
-                        Email: Account.Email,
+                        Email: (this.Email == '') ? Account.Email : this.Email,
                         Reminder: this.Reminder ? 15 : 0,
                         Format: "MM/DD/YYYY",
                         sway: this.Sway,
@@ -322,7 +330,7 @@
 
                     axios.put('/api/EventAPI/'+event.EventId, event)
                         .then(function (success) {
-                            window.location.reload();
+                            if (reload) window.location.reload();
                         })
                         .catch(function (error) { console.log(error) });
                 };
