Centralizing Components and Starting Event Cards

--- a/MyEventURL/Views/Events/Index.cshtml
+++ b/MyEventURL/Views/Events/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@Html.Partial("_GridComponent")
-@Html.Partial("_EventForm")
+﻿@Html.Partial("~/Views/Components/_GridComponent.cshtml")
+@Html.Partial("~/Views/Components/_EventForm.cshtml")
 
 @{
     ViewBag.Title = "Index";
