--- a/MyEventURL/Views/Components/_EventCard.cshtml
+++ b/MyEventURL/Views/Components/_EventCard.cshtml
@@ -10,8 +10,12 @@
 />
 -->
 <script type="text/x-template" id="eventcard-template">
-    <div :width="width">
-        {{description}}
+    <div :width="width" class="EventCard" :class="cstyle">
+        <h3>{{title}}</h3>
+        <p><b>&raquo; When:</b> {{starttime.format("LL")}}</p>
+        <p><b>&raquo; Where:</b> {{location}}</p>
+        <p><b>&raquo; Description:</b> {{shortened}}</p>
+        <a style="margin:5px" :href="href" class="btn btn-default">More</a>
     </div>
 </script>
 
@@ -20,7 +24,7 @@
     Vue.component('eventcard', {
         template: '#eventcard-template',
         props: {
-            id: String,
+            id: Number,
             title: String,
             description: String,
             location: String,
@@ -28,10 +32,12 @@
             timezone: String,
             cstyle: String,
             width: String,
-            chars: String
+            chars: String,
         },
         computed: {
-            shortened: function () { return this.description },
+            shortened: function () { return this.description.substring(0,this.chars) },
+            starttime: function () { return moment(this.start).tz(this.timezone) },
+            href: function () { return "/Events/Details/" + this.id;}
         },
         methods: {
         }
