--- a/MyEventURL/Views/Home/About.cshtml
+++ b/MyEventURL/Views/Home/About.cshtml
@@ -1,7 +1,104 @@
-﻿@{
-    ViewBag.Title = "About";
-}
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+﻿                @{ViewBag.Title = "About"; }
+                <div id="fb-root" style="margin:10px"></div>
 
-<p>Use this area to provide additional information.</p>
+
+
+                <div class="row">
+
+                    <div class="col-md-5">
+
+                        <h3>Vision</h3>
+
+                        <div>Technology can help make work better.  IdeationZone is an application designed to facilitate the brainstorming process with a group (see an <a href="@ViewBag.Featured">example</a>).  We live for that moment when two people exchange hunch and an idea is born!</div>
+
+                        <h3>Values</h3>
+
+                        <div class="row" style="padding:10px">
+                            <div class="col-md-2"><img src="~/Content/love.png" /></div><div class="col-md-offset-2">Change agents can do amazing work when they work on the right things with the right people.</div>
+                        </div>
+                        <div class="row" style="padding:10px">
+                            <div class="col-md-2"><img src="~/Content/sharing.png" /></div><div class="col-md-offset-2">Sharing helps connect people!  The source code for this project is made available under the MIT license at <a href="https://avisuj.github.io/ideationzone/">GitHub</a>. This app leverages several projects and add-ins like jquery, jqueryui, bootstrap, vuejs, and jquery sticky note that are protected under separate open license agreements.</div>
+                        </div>
+                        <div class="row" style="padding:10px">
+                            <div class="col-md-2"><img src="~/Content/view.png" /></div><div class="col-md-offset-2">Openness helps people prioritize projects! In order to promote opennesss, we ask that you generally license your contributions under a free and open license.</div>
+                        </div>
+
+                        <h3>About</h3>
+                        <p>The app makes it easy for people share their event:</p>
+
+                        <h4>Event Site</h4>
+                        In less than a minute you can have a website for your event.  Visitors can convert the event to local time to see if they can attend.  Visitors can add the event to their calendar in one click.
+
+                        <h4>Engaged Visitors</h4>
+                        You can get data on how many people visit your event site and add your event to their calendar.  In addition, you can use your event sites to interact with visitors via surveys, event summaries, and comments.
+
+                        <h4>Team Calendars</h4>
+                        You can group events onto a board.  You can embed your board whever your team works - SharePoint, Microsoft Teams, and More!
+                        <br /><br />
+
+                        <h3>Terms of Use</h3>
+
+                        By using this site, you accept our: <br />
+                        <button data-toggle="modal" data-target="#termsmodal" style="width:100px; height:50px; vertical-align:bottom">Terms of Use</button> &nbsp; <button data-toggle="modal" data-target="#privacymodal" style="width:100px; height:50px; vertical-align:bottom">Privacy Policy</button>
+
+                    </div>
+
+                    <div class="col-md-6 col-md-offset-1">
+
+                        <h3>Community</h3>
+
+                        <div class="fb-page" data-href="https://www.facebook.com/My-Event-URL-Community-242979979369065/" data-tabs="timeline" data-width="500" data-height="800" data-small-header="false" data-adapt-container-width="True" data-hide-cover="false" data-show-facepile="True"></div>
+
+                    </div>
+
+                </div>
+
+                <script>
+
+(function(d, s, id) {
+
+    var js, fjs = d.getElementsByTagName(s)[0];
+
+    if (d.getElementById(id)) return;
+
+    js = d.createElement(s); js.id = id;
+
+    js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=908917155889295";
+
+    fjs.parentNode.insertBefore(js, fjs);
+
+}(document, 'script', 'facebook-jssdk'));
+                </script>
+
+                <!-- Modal -->
+                <div class="modal fade" id="privacymodal" role="dialog">
+                    <div class="modal-dialog modal-lg">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Privacy Policy</h4>
+                            </div>
+                            <div class="modal-body" style="height:400px">
+                                <iframe src="https://avisuj.github.io/makemeetingsgreat/privacy.html" name="privacy" style="border:0px; width:100%; height:370px"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Modal -->
+                <div class="modal fade" id="termsmodal" role="dialog">
+                    <div class="modal-dialog modal-lg">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 class="modal-title">Terms of Use</h4>
+                            </div>
+                            <div class="modal-body" style="height:400px">
+                                <iframe src="https://avisuj.github.io/makemeetingsgreat/usage.html" name="usage" style="border:0px; width:100%; height:370px"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
