--- a/MyEventURL/Views/Events/Delete.cshtml
+++ b/MyEventURL/Views/Events/Delete.cshtml
@@ -1,81 +1,18 @@
-﻿@model MyEventURL.Event
-
-@{
+﻿@{
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Event</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Start)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Start)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.End)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.End)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Timezone)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Timezone)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Views)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Views)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Engaged)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Engaged)
-        </dd>
 
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+@{
+    if (User.Identity.Name != Model.OwnerID && !Model.Debug)
+    {
+        <div class="alert alert-danger" style="margin:10px">
+            You can only delete boards you own.
         </div>
+        @Html.Partial("_DetailsLogin") }
+    else
+    {
+        @Html.Partial("_DetailsDelete");
     }
-</div>
+}
