--- a/MyEventURL/Views/Shared/_LoginPartial.cshtml
+++ b/MyEventURL/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,7 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
+        <li><a href="http://register.makemeetingsgreat.com">Register</a></li>
         <li>@Html.ActionLink("Sign in", "SignIn", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
