--- a/MyEventURL/Views/Shared/_LoginPartial.cshtml
+++ b/MyEventURL/Views/Shared/_LoginPartial.cshtml
@@ -3,7 +3,7 @@
     <text>
     <ul class="nav navbar-nav navbar-right">
         <li class="navbar-text">
-            Hello, @User.Identity.Name!
+            Hello, @ViewBag.Email!
         </li>
         <li>
             @Html.ActionLink("Sign out", "SignOut", "Account")
