Fixing Auth Detection

--- a/MyEventURL/Views/Events/Delete.cshtml
+++ b/MyEventURL/Views/Events/Delete.cshtml
@@ -8,11 +8,15 @@
     ViewBag.Email = User.Identity.Name;
     if (ViewBag.Email != "")
     {
-        string[] emailarray1 = ViewBag.Email.Split('#');
-        ViewBag.Email = (emailarray1.Length > 0) ? emailarray1[1] : emailarray1[0];
-        emailarray1 = ViewBag.Email.Split('@');
-        ViewBag.UserName = emailarray1[0];
-        ViewBag.Domain = emailarray1[1];
+        string[] emailarray = new string[2];
+        if (ViewBag.Email.Contains("#"))
+        {
+            emailarray = ViewBag.Email.Split('#');
+            ViewBag.Email = emailarray[1];
+        }
+        emailarray = ViewBag.Email.Split('@');
+        ViewBag.UserName = emailarray[0];
+        ViewBag.Domain = emailarray[1];
     }
 
     if (ViewBag.Email != Model.Email)
